<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beacon Buddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">ScanBeaconActivity</string>
    <string name="login_hint">Login</string>
    <string name="login_user_hint">E-mail Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_passwd_hint">I forgot my password</string>
    <string name="login_button_string">Login</string>
    <string name="signup_button_string">Sign Up</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="new_user_hint">New User?</string>
    <string name="sign_up_link_hint">"Sign Up"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="scanning">Looking for beacons. Please wait..</string>
    <string name="no_devices">No beacons found</string>
    <string name="beacon_label">BeaconFriendlyName</string>
    <string name="trigger_label">Approaching</string>
    <string name="action_label">send notification</string>
    <string name="tb_label">On</string>
    <string name="title_activity_recipe_detail">Recipe</string>
    <string name="title_recipe_list">My Recipes</string>
    <string name="title_scan_screen">Beacon List</string>
    <string name="if_label">If</string>
    <string name="then_label">Then</string>
    <string name="tvActivateOn">"Activated on:"</string>
    <string name="tvDate">Date</string>
    <string name="tvTriggered">Triggered:</string>
    <string name="tvTiggerCount">Count</string>
    <string name="tvDistance">Distance:</string>
    <string name="tvBeaconDistance">Beacon Distance</string>
    <string name="receive_label">Receive Notification with this beacon</string>
    <string name="beaconname_label">Beacon Name and UUID</string>
    <string name="btn_add_beacon_string">Done</string>
    <string name="mac_address_string">MAC Address:</string>
    <string name="major_id_string">Major ID:</string>
    <string name="minor_id_string">Minor ID:</string>
    <string name="title_activity_recipe_action">Select Action</string>
    <string name="title_activity_app_list">Select Apps</string>
    <string name="notification_title">Beacon Buddy running</string>
    <string name="notification_text">Always on the lookout for you.</string>
    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
    <string name="tvBeacon_lab">Select Beacon!</string>
    <string name="tvAction_lab">Select Action!</string>
    <string name="rb_approaching_label">Approaching</string>
    <string name="rb_leaving_label">Leaving</string>
    <string name="tv_trigger_label">Set Trigger</string>
    <string name="activity_recipe_action_header_label">Track My Key</string>
    <string name="tv_action_label">Set Action</string>
    <string name="tv_message_label">Message</string>
    <string name="et_message_hint">Notification message</string>
    <string name="cb_notification_label">Notification</string>
    <string name="cb_sms_label">SMS</string>
    <string name="et_phn_hint">Phone Number</string>
    <string name="btn_done_label">Save</string>
    <string name="ok">OK</string>
    <string name="defualt_recipe_alert_message">Sorry, something went wrong. Please try again</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="signin_link_hint">Sign in</string>
    <string name="signup_link_hint">Sign Up</string>
    <string name="home_greeting">Beacon Buddy lets you do cool stuff based on iBeacons around you</string>
    <string name="empty_list_desc1">Create a new beacon recipe to get started.</string>
    <string name="empty_list_desc2">Just tap on the plus icon on top right to create your first recipe!</string>
    <string name="title_activity_map">Beacon Location</string>
    <string name="default_map_marker_snippet">Unknown</string>
    <string name="map_marker_title">Last Seen</string>
    <string name="device_not_found_string">FAR AWAY</string>
    <string name="uuid_label">UUID:</string>
    <string name="major_id_label">Major Id:</string>
    <string name="minor_id_label">Minor Id:</string>
    <string name="my_devices_tab_label">My Devices</string>
    <string name="new_devices_tab_label">New Devices</string>
    <string name="network_error_message">Looks like you dont have internet. Check you wifi/3G connection and try again.</string>
    <string name="duplicate_recipe_error_message">You already have a recipe with same beacon and action. Check your recipe and try again.</string>
    <string name="duplicate_beacon_name_message">You already have a beacon with that name. Try another.</string>
    <string name="no_bridge">No Bridge Found.   Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="btn_random">Random Lights</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="txt_click_random_button">Successfully setup Philips Hue lighting system. Click On, Off and Random button to test.</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_notification_description">NOTIFICATION</string>
    <string name="action_sms_description">SMS</string>
    <string name="action_silent_mode_description">SILENT MODE</string>
    <string name="action_hue_description">PHILIPS HUE</string>
    <string name="action_apps_description">LAUNCH APPS</string>
    <string name="button_label_configure_hue">Configure</string>
    <string name="button_label_logout">Sign Out</string>

</resources>
