<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvIF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="63dp"
        android:text="@string/if_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/btn_beacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:onClick="onScanBeacon"
        android:src="@drawable/ic_beacon_btn" />

    <ImageButton
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView01"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/TextView01"
        android:onClick="onSetAction"
        android:src="@drawable/ic_notification" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_beacon"
        android:layout_centerHorizontal="true"
        android:text="@string/then_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/btn_beacon"
        android:layout_marginTop="55dp"
        android:text="@string/tvActivateOn" />

    <TextView
        android:id="@+id/tvActivationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/tvDate" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:text="@string/tvTriggered" />

    <TextView
        android:id="@+id/tvTriggeredCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/tvActivationDate"
        android:text="@string/tvTiggerCount" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="22dp"
        android:text="@string/tvDistance" />

    <TextView
        android:id="@+id/tvBeaconDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignLeft="@+id/tvTriggeredCount"
        android:text="@string/tvBeaconDistance" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="22dp"
        android:text="@string/receive_label" />

    <ToggleButton
        android:id="@+id/tbStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_notification"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="18dp"
        android:textOn="Yes"
        android:textOff="No"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/tvBeaconnameandUUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvActivationDate"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="18dp"
        android:text="@string/beaconname_label" />

</RelativeLayout>
