<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/miAdd"
        android:icon="@drawable/ic_add"
        android:onClick="onAddAction"
        android:showAsAction="ifRoom"
        android:title="@string/action_add">
    </item>
    <item
        android:id="@+id/mi_recipe_refresh"
        android:icon="@drawable/ic_refresh"
        android:onClick="onRefresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/miSetting"
        android:icon="@drawable/ic_setting"
        android:onClick="onLightSetting"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_setting"/>

</menu>