<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beacon_background"
    tools:context="com.codepath.beacon.activity.SignUpActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#2633b5e5" >

        <TextView
            android:id="@+id/tvSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"            
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/sign_up_link_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignUpText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textColorHint="#CCCCCC"     
                        android:textColor="#FFFFFF"
                   
            android:hint="@string/login_user_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etSignUpPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSignUpEmail"
            android:layout_below="@+id/etSignUpEmail"
            android:layout_marginTop="20dp"
            android:textColorHint="#CCCCCC"
                        android:textColor="#FFFFFF"
                        
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/white"        
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#287AA9"
        android:onClick="onSignup"
        android:text="@string/signup_button_string" />

</RelativeLayout>