<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beacon_background"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="10dp"
        android:text="@string/home_greeting"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>
        
    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="33dp"
        android:clickable="true"
        android:onClick="onSignin"
        android:text="@string/signin_link_hint"
        android:textColor="#BBBBBB"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvNewUser"
        android:layout_alignBottom="@+id/tvNewUser"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:clickable="true"
        android:onClick="onSignup"
        android:text="@string/signup_link_hint"
        android:textColor="#BBBBBB"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>