<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.codepath.beacon.RecipeActionActivity"
        tools:ignore="MergeRootFrame" >

        <TextView
            android:id="@+id/tv_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/tv_trigger_label"
            android:textColor="@color/app_primary_color"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_trigger"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/rg_triggers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_trigger"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_approaching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_approaching_label" />

            <RadioButton
                android:id="@+id/rb_leaving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/rb_leaving_label" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_triggers"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/tv_action_label"
            android:textColor="@color/app_primary_color"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:id="@+id/tvActionDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_action"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />
        
        <HorizontalScrollView
            android:id="@+id/hsvActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvActionDivider" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                
                <LinearLayout
                    android:id="@+id/llNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/tvNotificationDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:textColor="@color/text_grey"
                        android:text="@string/action_notification_description" />
                    <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/notification2" />
                    
                </LinearLayout>

               <LinearLayout
                    android:id="@+id/llSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/tvSmsDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:textColor="@color/text_grey"
                        android:text="@string/action_sms_description" />
                    <ImageView
                    android:id="@+id/ivSms"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sms2" />
                    
                </LinearLayout>
                
                
                <LinearLayout
                    android:id="@+id/llSilent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/tvSilentDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:textColor="@color/text_grey"
                        android:text="@string/action_silent_mode_description" />
                    <ImageView
                    android:id="@+id/ivSilentMode"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/silent2" />
                    
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/tvLightDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:textColor="@color/text_grey"
                        android:text="@string/action_hue_description" />
                    <ImageView
                    android:id="@+id/ivLight"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_light" />
                    
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hsvActions"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="Message"
            android:textColor="@color/app_primary_color"
            android:textSize="16sp"
            android:visibility="invisible" >
        </TextView>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/tvMessage"
            android:layout_below="@+id/hsvActions"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/tvMessage"
            android:ems="10"
            android:hint="@string/et_message_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="16sp"
            android:visibility="invisible" >
        </EditText>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMessage"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:text="Phone"
            android:textColor="@color/app_primary_color"
            android:textSize="16sp"
            android:visibility="invisible" >
        </TextView>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvPhone"
            android:layout_alignLeft="@id/et_message"
            android:layout_below="@id/et_message"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/tvPhone"
            android:ems="10"
            android:hint="@string/et_phn_hint"
            android:inputType="phone"
            android:textSize="16sp"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>